fix: height of call popup on mobile

--- a/src/ui/popups/call-popup/call-popup.scss
+++ b/src/ui/popups/call-popup/call-popup.scss
@@ -17,5 +17,17 @@
             top: 0;
             scale: 1;
         }
+
+        .title {
+            margin-bottom: 35px;
+        }
+
+        .form {
+            gap: 15px;
+        }
+
+        .field {
+            height: 62px;
+        }
     }
 }
